styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
header {
  position: sticky;
  top: 0;
  background-color: white;
  z-index: 100000;
}
ul {
  list-style-type: none;
  overflow: hidden;
  margin: 0 3rem;
}
li {
  float: right;
}
#logo {
  float: left;
  padding: 1rem;
  position: relative;
  left: 2rem;
  font-size: max(1.5vw, 1rem);
  padding-left: 1.5rem;
}
#logo ::before {
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  background-color: gray;
  position: absolute;
  border-radius: 50%;
  left: -0.5rem;
  top: 1rem;
}
ul {
  padding: 1rem 2rem;
}
li a {
  text-decoration: none;
  display: block;
  padding: 1rem;
  color: black;
  font-size: max(1.5vw, 0.8rem);
}
main {
  width: 100%;
  height: fit-content;
}
.page-container {
  width: 85%;
  height: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin: 0 auto;
  gap: 5rem;
  margin-bottom: 15rem;
}
.text-container-1 {
  text-align: center;
  line-height: 6vw;
}
h1 {
  font-size: max(5vw, 1.5rem);
}
p {
  font-size: 1vw;
  line-height: max(4vw, 1.5rem);
  /* color: rgba(20, 19, 19, 0.852); */
}
h2 {
  font-size: max(3vw, 1.5rem);
}
button {
  height: max(2rem, 4vw);
  width: max(7rem, 17vw);
  border-radius: 67px;
  background-color: #285e67;
  border: none;
  color: white;
  font-size: max(1.5vw, 1rem);
  margin-bottom: 3rem;
}

.img-container-1 {
  display: flex;
  justify-content: space-between;
}
.img-container-1 img {
  width: 47%;
  height: 40%;
}
.container-2 {
  height: 446px;
  background-color: #f4f4f4;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
.text-container-2,
.text-container-4 {
  height: 342.54px;
  width: 50%;
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  align-self: center;
}
.box {
  height: 187.54px;
  width: 90%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.box div {
  width: fit-content;
}
.icon {
  height: 58px;
  width: 57px;
}
.box-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.img-container-2,
.img-container-4 {
  width: fit-content;
  align-self: center;
  width: 20%;
  min-width: 200px;
}
.img-container-2 img,
.img-container-4 img {
  width: 100%;
  align-self: center;
}

.container-3 {
  height: 578px;
  display: grid;
  grid-template-columns: 1fr 1fr;
}
#img-container-3 {
  width: 100%;
  height: 578px;
}

.list-container-3 {
  display: flex;
  gap: 1rem;
}
.img-icon-container-3 {
  display: inline-block;
  max-width: 52px;
  width: 25%;
  aspect-ratio: 1;
  border: 2px solid #285e67;
  border-radius: 50%;
  position: relative;
}
.img-icon-3 {
  height: 30.99px;
  width: 27.27px;
  position: absolute;
  top: 15%;
  left: 15%;
}
.list-text-container-3 {
  display: flex;
  align-items: center;
  font-size: 1rem;
}
.text-container-3 {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin: 0 2rem;
}

#img-container-4 {
  width: 80%;
}
.container-4 {
  height: 446px;
  background-color: #f4f4f4;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}
.img-container-5 {
  background-image: url(./Assets/background.png);
  background-size: 100% 100%;
  height: 667px;
  background-repeat: no-repeat;
  position: relative;
}
.img-text-box {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  height: 50%;
  width: 100%;
  position: absolute;
  top: 10%;
  margin: 0 auto;
}
.img-box {
  width: fit-content;
  height: 30%;

  align-self: center;
}
.img-text-box h3 {
  font-size: max(4vw, 2rem);
}
.img-text-box button {
  height: max(2rem, 4vw);
  width: max(7rem, 17vw);
  background-color: rgba(0, 0, 0, 0);
  border: 2px solid rgb(255, 255, 255);
  align-self: center;
  color: white;
  font-size: max(1.5vw, 1rem);
}

.text-box {
  width: 70%;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 1vw;
  color: white;
  margin: 0 auto;
}
.interaction-box {
  height: 50%;
  width: 80%;
  background-color: #fce2d7;
  border-radius: 12px;
  position: absolute;
  bottom: -20%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  left: 10%;
}
.icon2 {
  width: fit-content;
  display: flex;
  margin: 0 auto;
}
.icon2 img {
  height: 82px;
  width: 82px;
  padding: 15px;
}
p {
  text-align: center;
  font-size: 15px;
}
.icon-container {
  display: flex;
  margin: auto 0;
  flex-direction: column;
  height: fit-content;
}
footer {
  height: 245px;
  background-color: #285e67;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.footer-list a {
  color: white;
}
.footer-icon-container {
  display: flex;
  justify-content: center;
  gap: 2rem;
}
.footer-icon-container img {
  align-self: baseline;
}

@media screen and (max-width: 576px) {
  header,
  footer {
    padding: 1rem;
  }
  ul {
    margin: 0;
    padding: 0;
    /* display: none; */
  }
  li a {
    padding: 1rem 0.3rem;
  }

  div [class="img-container-3"] {
    display: none;
  }
  .container-3 {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }
  .text-container-3 {
    margin: 0;
    gap: 1rem;
    height: fit-content;
  }
  .interaction-box {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2rem;
    height: fit-content;
  }
  .container-3 {
    height: fit-content;
  }
  #img-container-3 {
    width: 100%;
    height: 50%;
  }
  .img-container-1 {
    display: flex;
    flex-direction: column;
    gap: 2rem;
  }
  .img-container-1 img {
    width: 100%;
  }
}

@media screen and (max-width: 768px) {
  div[class="img-container-2"],
  div[class="img-container-4"] {
    display: none;
  }
  div[class="text-container-2"],
  div[class="text-container-4"] {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10%;
    width: 100%;
  }
  span[class="box"] div {
    margin: 0 auto;
    text-align: center;
  }
  .interaction-box {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
    padding: 1rem;
  }
}

